# Guexit.ImageGeneration

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE_HEAD.md  build_docker_unix.sh  build_docker_windows.bat  codecov.yml  docker-compose.yml  env_samples.env  evaluate_prompt_randomness.py  generate-images.sh  pyproject.toml  run_docker_unix.sh  run_docker_windows.bat  stable_diffusion.py  start_consuming.ps1  start_consuming.sh  start_generating.sh  start_server.sh  tox.ini  variable_count_variance_example.py
.github/workflows/: docker.yml  generate-images-vm.yml  generate_images_vm.yml  linting.yml  publish.yml  tests.yml
benchmarks/: model_comparator.py
cloud_manager/: azure_blob_storage.py  azure_service_bus.py
cloud_manager/interfaces/: blob_storage.py  service_bus.py
examples/: txt2image.bat  txt2image.py  txt2image.sh  txt2style.py  txt2style.sh
image_generation/: custom_logging.py  image_generation_message_handler.py  logging.py  utils.py
image_generation/api/: models.py  server.py  utils.py
image_generation/core/: prompt_crafter.py  schedulers.py  stable_diffusion.py  styles.py
services/: config.py  image_generation_message_handler.py  message_handlers.py  message_service_bus.py  models.py
tests/: __init__.py
tests/benchmarks/: test_model_comparator.py
tests/cloud_manager/: test_azure_blob_storage.py  test_azure_service_bus.py
tests/image_generation/: test_api_models.py  test_api_server.py  test_api_utils.py  test_core_prompt_crafter.py  test_core_schedulers.py  test_core_stable_diffusion_handler.py  test_image_generation_stable_diffusion_handler.py  test_utils.py
tests/mocks/: stable_diffusion_pipeline_mock.py
tests/services/: test_image_generation_message_handler.py  test_message_handlers.py  test_message_service_bus.py
utils/: plot_variable_distributions.py
