[tool.poetry]
name        = "image_generation"
version     = "0.0.1"
description = "Image Generation library and service"
authors     = ["Unai Garay Maestre"]
packages = [
    { include = "image_generation" },
]

[tool.poetry.dependencies]
python              = { version = ">= 3.8, <= 3.10" }
fastapi             = { version = ">=0.89.1" }
uvicorn             = { version = ">=0.20.0" }
transformers        = { version = ">=4.25.1" }
diffusers           = { version = ">=0.11.1" }
ftfy                = { version = ">=6.1.1" }
pydantic            = { version = ">=1.10.2" }
accelerate          = { version = ">=0.15.0" }
omegaconf           = { version = ">=2.1.1" }
pytorch-lightning   = { version = ">=1.8.6" }
tensorboard         = { version = ">=2.11.0" }
einops              = { version = ">=0.6.0" }
kornia              = { version = ">=0.6" }
safetensors         = { version = ">=0.2.8" }
rich                = { version = ">=13.3.1" }
grequests           = { version = ">=0.6.0" }

# github repos
latent_diffusion    = { git = "https://github.com/CompVis/stable-diffusion.git" }
taming_transformers = { git = "https://github.com/CompVis/taming-transformers" }

# Guexit repos
cloud_manager       = { git = "https://github.com/Guexit/Guexit.CloudManager" }

# dev
pre-commit              = { version = ">= 3.1.1" }
black                   = { version = ">= 23.1.0" }
typer                   = { version = ">= 0.7.0" }
isort                   = { version = "^5.12.0" }

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
click = "*"
pre-commit = "*"
black = "*"
xenon = "*"
mypy = "*"
pydocstyle = "*"

[build-system]
requires        = [
    "poetry-core>=1.0.0",
    "setuptools",  # for pip install -e
    "cloud_manager @ git+https://${GH_TOKEN}@github.com/Guexit/Guexit.CloudManager"
]
build-backend   = "poetry.core.masonry.api"
