[tool.poetry]
name = "image-generation"
version = "0.1.2"
description = "Image Generation library and service"
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]
readme = "README.md"
packages = [
    {include = "image_generation"},
    {include = "services"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
transformers = "^4.30.2"
diffusers = "^0.21.0"
ftfy = "^6.1.1"
pydantic = "^1.10.2"
accelerate = "^0.21.0"
omegaconf = "^2.3.0"
pytorch-lightning = "^2.0.5"
tensorboard = "^2.13.0"
einops = "^0.6.1"
kornia = "^0.6.12"
rich = "^13.4.2"
httpx = "^0.24.1"
typing-extensions = "^4.7.1"
torch = ">=2.1.0"
cloud-manager = {git = "https://github.com/Guexit/Guexit.CloudManager"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
typer = "^0.9.0"
isort = "^5.12.0"
tox = "^4.6.4"
coverage = "^7.2.7"
pytest = "^7.4.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
